manifests-20251028-001521/service-typo3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"typo3-svc","namespace":"cms-system"},"spec":{"ports":[{"name":"http","port":80,"targetPort":8080}],"selector":{"app":"typo3"}}}
  creationTimestamp: "2025-10-22T19:58:51Z"
  name: typo3-svc
  namespace: cms-system
  resourceVersion: "4149474"
  uid: 925b1b92-22b9-4029-9591-002f41bd22e0
spec:
  clusterIP: 10.108.163.46
  clusterIPs:
  - 10.108.163.46
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: typo3
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
